--- a/local_music_preview.html
+++ b/local_music_preview.html
@@ -144,7 +144,7 @@
   
   <!-- 音频元素 -->
   <audio id="meditationAudio" loop preload="auto">
-    <source src="file:///Users/donald/Downloads/meditation-background-434654.mp3" type="audio/mpeg">
+    <source src="music/meditation-background-434654.mp3" type="audio/mpeg">
     您的浏览器不支持音频元素。
   </audio>
 
