删除最后的提示词注释
- 将'PWA 安装提示'注释改为'PWA 安装事件处理'
- 确保本地文件完全删除所有提示词相关内容

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             window.addEventListener('offline', updateOnlineStatus);
             updateOnlineStatus();
             
-            // PWA 安装提示
+            // PWA 安装事件处理
             window.addEventListener('beforeinstallprompt', (e) => {
                 e.preventDefault();
                 deferredPrompt = e;
